[package]
name = "passbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
minijinja = "1.0.0"
serde = {version = "1.0.145", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
serde_json = "1"
chrono = "0.4.24"
postgres = "0.19.5"
bigdecimal = "0.3.1"