[package]
name = "passbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.18"
axum = "0.6.19"
minijinja = "1.0.0"
serde = {version = "1.0.145", features = ["derive"]}
tokio-postgres = "0.7.8"
chrono = "0.4.26"
cookie = "0.17.0"
http = "0.2.9"
